[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiwoom-rest-api"
version = "0.1.0"
description = "키움증권 REST API Python 래퍼 (국내주식 207개 엔드포인트 + 실시간 WebSocket)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["kiwoom", "키움증권", "stock", "trading", "rest-api", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
authors = [
    {name = "Younghwan Chae", email = "chyohw97@gmail.com"},
]
dependencies = [
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
]

[project.urls]
Homepage = "https://github.com/younghwan91/kiwoom-rest-api"
Repository = "https://github.com/younghwan91/kiwoom-rest-api"
Documentation = "https://github.com/younghwan91/kiwoom-rest-api#readme"
Issues = "https://github.com/younghwan91/kiwoom-rest-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kiwoom_rest_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
